include_directories(SYSTEM ${GSTREAMER_INCLUDE_DIRS})
if(GSTREAMER_INPUT_STATIC)
  add_library(input_gstreamer input_gstreamer.c)
  target_link_libraries(input input_gstreamer)
  set_target_properties(input input_gstreamer PROPERTIES COMPILE_DEFINITIONS GSTREAMER_INPUT_STATIC)
else()
  add_library(input_gstreamer MODULE input_gstreamer.c)
  install(TARGETS input_gstreamer LIBRARY DESTINATION ${FOLDER_PLUGIN})
endif()
set_target_properties(input_gstreamer PROPERTIES COMPILE_FLAGS "${GSTREAMER_CFLAGS}")
target_link_libraries(input_gstreamer ${GSTREAMER_LIBRARY} ${GSTAPP_LIBRARY} ${GSTAUDIO_LIBRARY} ${GOBJECT_LIBRARY} ${GLIB_LIBRARY})
set_target_properties(input_gstreamer PROPERTIES LINK_INTERFACE_LIBRARIES "")
