cmake_minimum_required(VERSION 2.8)
include(utils)

find_package(PkgConfig)
pkg_check_modules(GMODULE20 gmodule-2.0)
pkg_check_modules(GSTREAMER_APP   gstreamer-app-0.10)
pkg_check_modules(GSTREAMER_AUDIO gstreamer-audio-0.10)

if(GSTREAMER_APP_FOUND AND GSTREAMER_AUDIO_FOUND)
    set(GSTREAMER_FOUND TRUE)
endif()

set(SUMMARY_GSTREAMER_FOUND ${GSTREAMER_FOUND} CACHE INTERNAL "")

if(GMODULE20_FOUND AND GSTREAMER_FOUND AND
   INPUT_INCLUDE_DIR AND EBUR128_INCLUDE_DIR AND
   NOT DISABLE_GLIB20 AND NOT DISABLE_GSTREAMER)
  add_library(input_gstreamer MODULE input_gstreamer.c)

  include_directories(${INPUT_INCLUDE_DIR} ${EBUR128_INCLUDE_DIR})

  list(APPEND INPUT_GSTREAMER_CFLAGS  ${GMODULE20_CFLAGS}  ${GSTREAMER_APP_CFLAGS}  ${GSTREAMER_AUDIO_CFLAGS})
  list(APPEND INPUT_GSTREAMER_LDFLAGS ${GMODULE20_LDFLAGS} ${GSTREAMER_APP_LDFLAGS} ${GSTREAMER_AUDIO_LDFLAGS})

  to_space_list(INPUT_GSTREAMER_CFLAGS)
  to_space_list(INPUT_GSTREAMER_LDFLAGS)

  set_target_properties(input_gstreamer PROPERTIES
          COMPILE_FLAGS ${INPUT_GSTREAMER_CFLAGS}
             LINK_FLAGS ${INPUT_GSTREAMER_LDFLAGS})
endif()
